--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,18 @@
+:root {
+  --main-color: rgb(29, 155, 240);
+}
+
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Work Sans', sans-serif;
 }
 
 a {
   text-decoration: none;
+  color: inherit;
+}
+
+.container {
+  margin: 0 2rem;
 }
