--- a/client/src/pages/AuthPage/AuthPage.css
+++ b/client/src/pages/AuthPage/AuthPage.css
@@ -22,7 +22,7 @@
     display: flex;
     flex-direction: column;
 }
-button {
+:is(.signup, .signin) button {
     border: 1px solid rgba(0, 0, 0, 0.2);
     background-color: white;
     border-radius: 20px;
