--- a/client/src/components/RegisterForm/RegisterForm.css
+++ b/client/src/components/RegisterForm/RegisterForm.css
@@ -16,13 +16,17 @@
     border-radius: 5px;
 }
 
-/* .registerFormFocus form input {
-    padding: 1rem 10px;
-    font-size: 16px;
-    border-radius: 5px;
-    border: 2px solid;
-    border-color: var(--main-color);
-} */
+.registerForm form input:focus::placeholder {
+    position: absolute;
+    margin-top: -12px;
+    font-size: 14px;
+    color: var(--main-color);
+    transition: all .1s ease-in-out;
+}
+
+.registerForm form input:focus {
+    outline-color: var(--main-color);
+}
 
 .registerForm form input:nth-child(2) {
     margin: 1.5rem 0;
@@ -33,7 +37,7 @@
     text-align: end;
     font-size: 14px;
     font-weight: 500;
-    margin-top: -10px;
+    margin-top: 10px;
     margin-bottom: 1.5rem;
 }
 
@@ -51,6 +55,49 @@
     margin-bottom: 1rem;
 }
 
+.registerFormBirth {
+    display: flex;
+}
+
+.registerFormBirth label {
+    position: absolute;
+    font-size: 12px;
+    margin-left: 8px;
+    margin-top: 4px;
+}
+
+.registerMonth {
+    flex-grow: 2;
+    margin-right: 11px;
+}
+
+.registerMonth select {
+    width: 100%;
+    height: 3rem;
+    border-radius: 3px;
+}
+
+.registerDay {
+    flex-grow: 1;
+    margin-right: 11px;
+}
+
+.registerDay select {
+    width: 100%;
+    height: 3rem;
+    border-radius: 3px;
+}
+
+.registerYear {
+    flex-grow: 1;
+}
+
+.registerYear select {
+    width: 100%;
+    height: 3rem;
+    border-radius: 3px;
+}
+
 .registerFormMain button {
     position: fixed;
     bottom: 25px;
@@ -60,6 +107,6 @@
     font-size: 1em;
     border-radius: 50px;
     border: var(--border-lightgray);
-    background-color: #878a8c;
+    background-color: var(--main-color);
     color: white;
 }
